# wordle

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  pyqt_ui.py
src/app/: game_logic.py
src/db/: db_init.py  db_utils.py
src/db/tables/: __init__.py  scoreboard_entity.py
src/ui/: __init__.py  game_window.py  main_window.py  starting_window.py
src/ui/app/: __init__.py  color.py  game_logic.py  words.txt
src/utils/: game_settings.py
