[tool.poetry]
name = "wordle"
version = "0.0.1"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.3.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 39
profile = "black"
line_length = 120
skip = ["__init__.py", "venv", ".git"]

[tool.black]
line-length = 120
target-version = ['py39']
